Add border to services

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="text-center pt-2 m-2">
                     <img src="generah.png" class="logo text-center" alt="Generah">
                 </div>
-                <h1 class="m-0 display-5 font-weight-light">Generah Systems</h1>
+                <h2 class="m-0 font-weight-light">Generah Systems</h2>
                 <i class="">We just solve your challenges</i>
                 <hr>
                 <div class="bg-black py-2 text-white">
@@ -40,17 +40,17 @@
             </div>
             <div class="row p-4">
                 <div class="col-12 mb-2">
-                    <div class="card border-primary py-3 font-weight-bold">
+                    <div class="card bg-primary text-white py-3 font-weight-bold">
                         Web Design & Development
                     </div>
                 </div>
                 <div class="col-6 mb-2">
-                    <div class="card bg-primary py-3 text-white">
+                    <div class="card bg-light border-secondary py-3">
                         Digital Marketing
                     </div>
                 </div>
                 <div class="col-6 mb-2">
-                    <div class="card bg-primary py-3 text-white">
+                    <div class="card bg-light border-secondary py-3">
                         Graphics & Branding
                     </div>
                 </div>
